updated mx plugin files

--- a/example/package.json
+++ b/example/package.json
@@ -17,9 +17,7 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "plugins": {
-      "io-anyline-cordova": {}
-    },
+    "plugins": {},
     "platforms": [
       "ios"
     ]
