renamed the plugin to io-anyline-cordova-mx-scanner

--- a/plugin/package.json
+++ b/plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "io-anyline-cordova",
+  "name": "io-anyline-cordova-mx-scanner",
   "version": "18.1.0",
   "description": "The cordova plugin for the Anyline SDK",
   "cordova": {
