--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -10,7 +10,7 @@ repositories{
 dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:19-NoDocUI@aar'
+    implementation 'io.anyline:anylinesdk:20-NoDocUI@aar'
 //    implementation (name: 'anylinesdk-release-16', ext: 'aar')
 }
 
@@ -18,7 +18,7 @@ android {
 
   defaultConfig {
       ndk {
-      abiFilters "armeabi-v7a", "x86", "arm64-v8a"
+      abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64" 
     } 
   }
 
