--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,7 +1,7 @@
 repositories{
     google()
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
+    maven { url 'https://anylinesdk.blob.core.windows.net/testing/'}
     flatDir {
         dirs 'libs'
     }
@@ -10,7 +10,7 @@ repositories{
 dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:20-NoDocUI@aar'
+    implementation 'io.anyline:anylinesdk:21-RC5NoDocUI@aar'
 //    implementation (name: 'anylinesdk-release-16', ext: 'aar')
 }
 
@@ -23,8 +23,8 @@ android {
   }
 
   compileOptions {
-      sourceCompatibility JavaVersion.VERSION_1_7
-      targetCompatibility JavaVersion.VERSION_1_7
+      sourceCompatibility JavaVersion.VERSION_1_8
+      targetCompatibility JavaVersion.VERSION_1_8
   }
 
   packagingOptions {
@@ -37,8 +37,8 @@ android {
 ext.postBuildExtras = {
     android {
         compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_7
-            targetCompatibility JavaVersion.VERSION_1_7
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
         }
     }
 }
