--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "22.0.0",
+  "version": "23.0.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -18,9 +18,12 @@
   "license": "ISC",
   "cordova": {
     "plugins": {},
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   },
   "dependencies": {
+    "cordova-android": "^9.0.0",
     "io-anyline-cordova": "file:../plugin"
   }
 }
