--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -10,8 +10,7 @@ repositories{
 dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:24-RC3NoDocUI@aar'
-    implementation("com.google.guava:guava:29.0-android")
+    implementation 'io.anyline:anylinesdk:24-RC3NoDocUI'
 //    implementation (name: 'anylinesdk-release-16', ext: 'aar')
 }
 
