--- a/example/package.json
+++ b/example/package.json
@@ -17,15 +17,8 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "plugins": {
-      "io-anyline-cordova": {}
-    },
-    "platforms": [
-      "ios"
-    ]
+    "plugins": {},
+    "platforms": []
   },
-  "dependencies": {
-    "cordova-ios": "^5.1.1",
-    "io-anyline-cordova": "file:../plugin"
-  }
+  "dependencies": {}
 }
