--- a/example/package.json
+++ b/example/package.json
@@ -20,5 +20,7 @@
     "plugins": {},
     "platforms": []
   },
-  "dependencies": {}
+  "dependencies": {
+    "io-anyline-cordova": "file:../plugin"
+  }
 }
