--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "24.0.0",
+  "version": "24.1.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -17,13 +17,17 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "plugins": {},
+    "plugins": {
+      "io-anyline-cordova": {}
+    },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   },
   "dependencies": {
     "cordova-android": "^9.0.0",
+    "cordova-ios": "^5.1.1",
     "io-anyline-cordova": "file:../plugin"
   }
 }
