--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "24.0.0",
+  "version": "24.1.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -18,12 +18,9 @@
   "license": "ISC",
   "cordova": {
     "plugins": {},
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   },
   "dependencies": {
-    "cordova-android": "^9.0.0",
     "io-anyline-cordova": "file:../plugin"
   }
 }
