--- a/example/package.json
+++ b/example/package.json
@@ -17,10 +17,18 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "plugins": {},
-    "platforms": []
+    "plugins": {
+      "io-anyline-cordova": {}
+    },
+    "platforms": [
+      "ios",
+      "android"
+    ]
   },
   "dependencies": {
+    "cordova-android": "^9.0.0",
+    "cordova-ios": "~5.1.1",
     "io-anyline-cordova": "file:../plugin"
-  }
+  },
+  "devDependencies": {}
 }
