--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,7 +1,7 @@
 repositories{
     google()
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/testing/'}
+    maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
     flatDir {
         dirs 'libs'
     }
@@ -10,15 +10,15 @@ repositories{
 dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:25-RC2-NoDocUI'
-//    implementation (name: 'anylinesdk-release-16', ext: 'aar')
+    implementation 'io.anyline:anylinesdk:25-NoDocUI'
+
 }
 
 android {
 
   defaultConfig {
       ndk {
-      abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64" 
+      abiFilters "armeabi-v7a", "arm64-v8a"
     } 
   }
 
