update version nr in package.json

--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,8 @@
     "plugins": {},
     "platforms": []
   },
-  "dependencies": {},
+  "dependencies": {
+    "io-anyline-cordova": "file:../plugin"
+  },
   "devDependencies": {}
 }
