--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -8,10 +8,12 @@ repositories{
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
-    implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
+    implementation 'com.google.firebase:firebase-ml-vision:24.1.0'
+    implementation 'com.google.android.gms:play-services-vision:20.1.1'
+    implementation 'com.google.android.gms:play-services-vision-common:19.1.1'
+    implementation 'com.google.firebase:firebase-ml-vision-face-model:20.0.2'
+    implementation 'com.google.android.gms:play-services-vision-face-contour-internal:16.0.2'
     implementation 'io.anyline:anylinesdk:25-NoDocUI'
-
 }
 
 android {
