update license handling

--- a/example/package.json
+++ b/example/package.json
@@ -18,9 +18,12 @@
   "license": "ISC",
   "cordova": {
     "plugins": {},
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   },
   "dependencies": {
+    "cordova-android": "^9.0.0",
     "io-anyline-cordova": "file:../plugin"
   },
   "devDependencies": {}
