--- a/example/package.json
+++ b/example/package.json
@@ -20,14 +20,9 @@
     "plugins": {
       "io-anyline-cordova": {}
     },
-    "platforms": [
-      "android",
-      "ios"
-    ]
+    "platforms": []
   },
   "dependencies": {
-    "cordova-android": "^9.0.0",
-    "cordova-ios": "^6.1.1",
     "io-anyline-cordova": "file:../plugin"
   },
   "devDependencies": {}
