--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "26.0.0",
+  "version": "26.1.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -20,9 +20,12 @@
     "plugins": {
       "io-anyline-cordova": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   },
   "dependencies": {
+    "cordova-android": "^9.0.0",
     "io-anyline-cordova": "file:../plugin"
   },
   "devDependencies": {}
