update version number & license key

--- a/example/package.json
+++ b/example/package.json
@@ -20,9 +20,12 @@
     "plugins": {
       "io-anyline-cordova": {}
     },
-    "platforms": []
+    "platforms": [
+      "android"
+    ]
   },
   "dependencies": {
+    "cordova-android": "^9.0.0",
     "io-anyline-cordova": "file:../plugin"
   },
   "devDependencies": {}
