--- a/example/package.json
+++ b/example/package.json
@@ -20,8 +20,6 @@
     "plugins": {},
     "platforms": []
   },
-  "dependencies": {
-    "io-anyline-cordova": "file:../plugin"
-  },
+  "dependencies": {},
   "devDependencies": {}
 }
