--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -2,7 +2,7 @@
 <plugin
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="io-anyline-cordova"
+        id="io-anyline-cordova-nopods"
         version="28.1.0">
 
     <name>AnylineSDK</name>
