--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -10,8 +10,12 @@ repositories{
 dependencies {
     implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
     implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:28.1'       
-
+    implementation('io.anyline:anylinesdk:28.1') {
+        exclude group: 'androidx.multidex', module: 'multidex'
+        exclude group: 'androidx.annotation', module: 'annotation'
+    }
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
 
 android {
