--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,17 +1,14 @@
 repositories{
     google()
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
+    maven { url 'https://anylinesdk.blob.core.windows.net/testing/'}
     flatDir {
         dirs 'libs'
     }
 }
 
 dependencies {
-    implementation 'com.google.firebase:firebase-ml-vision:19.0.2'
-    implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
-    implementation 'io.anyline:anylinesdk:28.1.1'
-
+    implementation 'io.anyline:anylinesdk:29-RC2'
 }
 
 android {
