--- a/example/package.json
+++ b/example/package.json
@@ -20,12 +20,10 @@
     "plugins": {
       "io-anyline-cordova": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   },
   "devDependencies": {
-    "cordova-android": "^9.1.0",
     "io-anyline-cordova": "file:../plugin"
-  }
+  },
+  "dependencies": {}
 }
