--- a/example/package.json
+++ b/example/package.json
@@ -17,9 +17,15 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "plugins": {},
-    "platforms": []
+    "plugins": {
+      "io-anyline-cordova": {}
+    },
+    "platforms": [
+      "android"
+    ]
   },
-  "devDependencies": {},
-  "dependencies": {}
+  "devDependencies": {
+    "cordova-android": "^9.1.0",
+    "io-anyline-cordova": "file:../plugin"
+  }
 }
