--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "37.0.0",
+  "version": "38.0.0-RC1",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -17,9 +17,15 @@
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
   "cordova": {
-    "plugins": {},
-    "platforms": []
+    "plugins": {
+      "io-anyline-cordova": {}
+    },
+    "platforms": [
+      "android"
+    ]
   },
-  "devDependencies": {},
-  "dependencies": {}
+  "devDependencies": {
+    "cordova-android": "^10.1.1",
+    "io-anyline-cordova": "file:../plugin"
+  }
 }
