Update version to 40.0.0-rc.1

--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -8,7 +8,7 @@ repositories{
 }
 
 dependencies {
-    implementation 'io.anyline:anylinesdk:40.0.0-rc1'
+    implementation 'io.anyline:anylinesdk:40.0.0-rc.1'
 }
 
 android {
