--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -3,7 +3,7 @@
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="io-anyline-cordova"
-        version="40.0.0">
+        version="41.0.0-rc1">
 
     <name>AnylineSDK</name>
 
