--- a/plugin/package.json
+++ b/plugin/package.json
@@ -21,5 +21,7 @@
   },
   "author": "Anyline GmbH",
   "license": "SEE LICENSE IN LICENSE",
-  "dependencies": {}
+  "dependencies": {
+    "xml-js": "^1.6.11"
+  }
 }
