Revert package.json changes

--- a/example/package.json
+++ b/example/package.json
@@ -21,12 +21,13 @@
       "io-anyline-cordova": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   },
   "devDependencies": {
-    "cordova-android": "^9.0.0",
-    "cordova-ios": "^5.0.0",
+    "cordova-android": "^11.0.0",
+    "cordova-ios": "^6.2.0",
     "io-anyline-cordova": "file:../plugin"
   }
 }
