--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin
-        xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        id="io-anyline-cordova"
-        version="42.0.0">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+    xmlns:android="http://schemas.android.com/apk/res/android" id="io-anyline-cordova" version="43.0.0">
 
     <name>AnylineSDK</name>
 
     <!--Add Platform specific Files-->
     <platform name="ios">
-        <hook type="after_plugin_install" src="scripts/ios/after_plugin_install.js" />
         <hook type="before_plugin_uninstall" src="scripts/ios/before_plugin_uninstall.js" />
+        <hook type="after_plugin_install" src="scripts/ios/after_plugin_install.js" />
 
-		<js-module src="www/anyline.js" name="anyline">
-			<clobbers target="window.Anyline" />
-		</js-module>
+        <js-module src="www/anyline.js" name="anyline">
+            <clobbers target="window.Anyline" />
+        </js-module>
 
         <plugins-plist key="AnylineSDK" string="AnylineSDKPlugin"/>
         <!-- feature tag in config.xml -->
@@ -42,11 +39,11 @@
         <source-file src="src/ios/ALNFCScanViewController.m"/>
 
         <!-- Anyline Framework & Resource Bundle locally -->
-        <!-- <framework custom="true" src="src/ios/anyline_sdk/Anyline.framework"/>-->
+        <!-- <framework custom="true" src="src/ios/anyline_sdk/Anyline.xcframework"/>-->
         <!-- <resource-file src="src/ios/anyline_sdk/AnylineResources.bundle"/>-->
 
-        <!-- Anyline Framework & Resource Bundle CocoaPods -->
-        <framework src="Anyline" type="podspec" swift-version="4.2" spec="~> 42.0.0"/>
+        <!-- Anyline Framework & Resource Bundle CocoaPods-->
+        <framework src="Anyline" type="podspec" swift-version="4.2" spec="~> 43.0.0"/>
 
         <!-- <podspec>
             <config>
@@ -68,12 +65,12 @@
     </platform>
     <platform name="android">
 
-		<js-module src="www/anyline.js" name="anyline">
-			<clobbers target="window.Anyline" />
-		</js-module>
+        <js-module src="www/anyline.js" name="anyline">
+            <clobbers target="window.Anyline" />
+        </js-module>
 
         <!-- register plugin -->
-        <framework custom="true" src="src/android/anyline.gradle" type="gradleReference"/>
+        <framework custom="true" src="src/android/build.gradle" type="gradleReference"/>
 
         <config-file parent="/*" target="config.xml">
             <feature name="AnylineSDK">
@@ -87,48 +84,26 @@
             <uses-permission android:name="android.permission.VIBRATE"/>
         </config-file>
         <config-file mode="merge" parent="/manifest/application" target="AndroidManifest.xml">
-            <meta-data
-                    android:name="com.google.android.gms.vision.DEPENDENCIES"
-                    android:value="barcode"/>
+            <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode"/>
         </config-file>
         <config-file mode="merge" parent="/manifest/application" target="AndroidManifest.xml">
-	    <activity android:name="io.anyline.cordova.Document4Activity"
-                      android:theme="@android:style/Theme.Black.NoTitleBar" />
-	    <activity android:name="io.anyline.cordova.Anyline4Activity"
-                      android:theme="@android:style/Theme.Black.NoTitleBar" />
-	    <activity android:name="io.anyline.cordova.CropViewUIActivity"
-                      android:theme="@android:style/Theme.Black.NoTitleBar" />
-	    <activity android:name="io.anyline.cordova.DocumentScanViewUIActivity"
-                      android:theme="@android:style/Theme.Black.NoTitleBar" />
-	    <activity android:name="io.anyline.cordova.DocScanUIMainActivity"
-                      android:theme="@android:style/Theme.Black.NoTitleBar" />
+            <activity android:name="io.anyline.cordova.ScanActivity" android:theme="@style/AppTheme" />
         </config-file>
 
         <!-- add plugin source code -->
-	    <source-file src="src/android/io/anyline/cordova/Anyline4Activity.java" target-dir="src/io/anyline/cordova"/>
-	    <source-file src="src/android/io/anyline/cordova/AnylineBaseActivity.java" target-dir="src/io/anyline/cordova"/>
+        <source-file src="src/android/io/anyline/cordova/ScanActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/AnylinePlugin.java" target-dir="src/io/anyline/cordova"/>
-	    <source-file src="src/android/io/anyline/cordova/AnylinePluginHelper.java" target-dir="src/io/anyline/cordova"/>
-        <source-file src="src/android/io/anyline/cordova/Document4Activity.java" target-dir="src/io/anyline/cordova"/>
-        <source-file src="src/android/io/anyline/cordova/CordovaUIConfig.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/ResultReporter.java" target-dir="src/io/anyline/cordova"/>
-        <source-file src="src/android/io/anyline/cordova/Resources.java" target-dir="src/io/anyline/cordova"/>
+        <source-file src="src/android/io/anyline/cordova/Offset.java" target-dir="src/io/anyline/cordova"/>
+        <source-file src="src/android/io/anyline/cordova/RotateButtonConfig.java" target-dir="src/io/anyline/cordova"/>
 
-
-        <resource-file src="src/android/res/values/anyline_sdk_plugin_strings.xml"
-                       target="res/values/anyline_sdk_plugin_strings.xml"/>
-        <resource-file src="src/android/res/values/anyline_sdk_plugin_colors.xml"
-                       target="res/values/anyline_sdk_plugin_colors.xml"/>
-        <resource-file src="src/android/res/values-de/anyline_sdk_plugin_strings.xml"
-                       target="res/values-de/anyline_sdk_plugin_strings.xml"/>
-        <resource-file src="src/android/res/layout/activity_scan_document.xml"
-                       target="res/layout/activity_scan_document.xml"/>
-        <resource-file src="src/android/res/layout/activity_scan_scanview.xml"
-                       target="res/layout/activity_scan_scanview.xml"/>
-        <resource-file src="src/android/res/drawable/manual_picture.png"
-                       target="res/drawable/manual_picture.png"/>
-        <resource-file src="src/android/res/drawable/right_arrow.png"
-                       target="res/drawable/right_arrow.png"/>
+        <resource-file src="src/android/res/values/anyline_sdk_plugin_strings.xml" target="res/values/anyline_sdk_plugin_strings.xml"/>
+        <resource-file src="src/android/res/values/anyline_sdk_plugin_colors.xml" target="res/values/anyline_sdk_plugin_colors.xml"/>
+        <resource-file src="src/android/res/layout/activity_scan.xml" target="res/layout/activity_scan.xml"/>
+        <resource-file src="src/android/res/values/styles.xml" target="res/values/styles.xml"/>
+        <resource-file src="src/android/res/drawable/right_arrow.png" target="res/drawable/right_arrow.png"/>
+        <resource-file src="src/android/res/drawable/rotate_screen_background.xml" target="res/drawable/rotate_screen_background.png"/>
+        <resource-file src="src/android/res/drawable/rotate_screen_white.png" target="res/drawable/rotate_screen_white.png"/>
 
     </platform>
 
