--- a/example/package.json
+++ b/example/package.json
@@ -1,23 +1,25 @@
 {
   "name": "anyline-cordova-example",
-  "version": "40.0.0",
+  "version": "43.0.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "reinstall": "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add android@latest && cordova plugin add ../plugin",
-    "reinstall-ios": "cordova platform remove ios && cordova plugin remove io-anyline-cordova && cordova platform add ios@latest && cordova plugin add ../plugin",
+    "reinstall-ios": "cordova platform remove ios; cordova plugin remove io-anyline-cordova; cordova platform add ios@latest; cordova plugin add ../plugin; cordova build ios",
     "reinstall-win": "cordova platform remove windows && cordova plugin remove io-anyline-cordova && cordova platform add windows@latest && cordova plugin add ../plugin",
     "overwrite": "rm -R ../src/android/io && rm -R ../src/android/res && cp -R platforms/android/src/io ../src/android/ && cp -R platforms/android/res ../src/android",
-    "overwrite-ios": "rm -R ../src/ios/io && rm -R ../src/ios/res && cp -R platforms/ios/src/io ../src/android/ && cp -R platforms/ios/res ../src/ios",
-    "OandR": "npm run overwrite && npm run reinstall",
-    "OandR-ios": "npm run overwrite-ios && npm run reinstall-ios",
-    "cleanUp": "cordova platform remove android && cordova platform remove ios && cordova platform remove windows && cordova plugin remove io-anyline-cordova"
+    "overwrite-ios": "rm -R ../plugin/src/ios; cp -R platforms/ios/Anyline\\ Cordova\\ Example/Plugins/io-anyline-cordova ../plugin/src/ios",
+    "cleanup": "cordova platform remove android && cordova platform remove ios && cordova platform remove windows && cordova plugin remove io-anyline-cordova"
   },
-  "author": "Jonas Laux | Daniel Albertini",
+  "author": "Daniel Albertini | Jonas Laux",
   "license": "ISC",
   "cordova": {
     "plugins": {
+      "cordova-plugin-file": {
+        "ANDROIDX_WEBKIT_VERSION": "1.4.0"
+      },
+      "cordova-plugin-dialogs": {},
       "io-anyline-cordova": {}
     },
     "platforms": [
@@ -26,8 +28,9 @@
     ]
   },
   "devDependencies": {
-    "cordova-android": "^11.0.0",
     "cordova-ios": "^6.2.0",
+    "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-file": "^7.0.0",
     "io-anyline-cordova": "file:../plugin"
   }
 }
